# cmake_minimum_required(VERSION <specify CMake version here>)
project(2020_01_21_cxx20_playground)

set(CMAKE_CXX_STANDARD 20)

add_executable(guenther_kaese_linked_list guenther_kaese_linked_list.cpp)
add_executable(guenther_kaese_isutf8 guenther_kaese_isutf8.cpp)
add_executable(leetcode_2_add_two_numbers leetcode_2_add_two_numbers.cpp)
add_executable(leetcode_3_longest_substring leetcode_3_longest_substring.cpp)
add_executable(leetcode_53_sum leetcode_53_sum.cpp)
add_executable(leetcode_70_climbing_stairs leetcode_70_climbing_stairs.cpp)
add_executable(leetcode_63_unique_paths_ii leetcode_63_unique_paths_ii.cpp)
add_executable(leetcode_121_best_time_to_sell_stock leetcode_121_best_time_to_sell_stock.cpp)
