cmake_minimum_required(VERSION 3.19)
project(2020_01_21_cxx20_playground)

set(CMAKE_CXX_STANDARD 20)

add_executable(guenther_kaese_linked_list guenther_kaese_linked_list.cpp)
add_executable(guenther_kaese_isutf8 guenther_kaese_isutf8.cpp)
add_executable(leetcode_002_add_two_numbers leetcode_000_common.h leetcode_002_add_two_numbers.cpp)
add_executable(leetcode_003_longest_substring leetcode_000_common.h leetcode_003_longest_substring.cpp)
add_executable(leetcode_005_longest_palindrome_substring leetcode_000_common.h leetcode_005_longest_palindrome_substring.cpp)
add_executable(leetcode_006_zig_zag_conversion leetcode_000_common.h leetcode_006_zig_zag_conversion.cpp)
add_executable(leetcode_007_reverse_integer leetcode_000_common.h leetcode_007_reverse_integer.cpp)
add_executable(leetcode_053_sum leetcode_000_common.h leetcode_053_sum.cpp)
add_executable(leetcode_070_climbing_stairs leetcode_000_common.h leetcode_070_climbing_stairs.cpp)
add_executable(leetcode_063_unique_paths_ii leetcode_000_common.h leetcode_063_unique_paths_ii.cpp)
add_executable(leetcode_121_best_time_to_sell_stock leetcode_000_common.h leetcode_121_best_time_to_sell_stock.cpp)
